Add Android Gradle build for JNI library